added React to a demo django project

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,6 +12,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav" style="text-align:center;">
             <li><a href="{% url 'users:home' %}">Users</a></li>
+            <li><a href="{% url 'companies:company_list' %}">Companies</a></li>            
           </ul>
           <ul class="nav navbar-nav navbar-right" style="text-align:center;">
             <li><a href="#signup">sign up</a></li>
