added static files back into static directory

--- a/companies/templates/companies/companies.html
+++ b/companies/templates/companies/companies.html
@@ -2,7 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block content %}
-
+{% include 'nav.html' %}
 <div id="container">
 {% render_bundle 'main' %}
 </div>
