rewrote Users page in React

--- a/companies/templates/companies/company.html
+++ b/companies/templates/companies/company.html
@@ -5,7 +5,7 @@
 {% include 'nav.html' %}
 <div id="container">
   <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
-  <i class="pending">Loading companies...</i><br><br>
+  <i class="pending">Loading users...</i><br><br>
 {% render_bundle 'main' %}
 </div>
 {% endblock content%}
