added react view for user profile

--- a/companies/templates/companies/companies.html
+++ b/companies/templates/companies/companies.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% include 'nav.html' %}
-<div id="container">
+<div id="companycontainer">
   <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
   <i class="pending">Loading companies...</i><br><br>
 {% render_bundle 'main' %}
