--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,12 +7,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Lead</a>
+          <a class="navbar-brand" href="/"><i>Lead</i></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav" style="text-align:center;">
             <li><a href="{% url 'users:home' %}">Users</a></li>
-            <li><a href="{% url 'companies:company_list' %}">Companies</a></li>            
+            <li><a href="{% url 'companies:company_list' %}">Companies</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right" style="text-align:center;">
             <li><a href="#signup">sign up</a></li>
